Revert "Another attempt to fix horizontal scroll"
This reverts commit a39046b2174238fa157d50bbc02972259fe2b13d.

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -14,7 +14,6 @@ body {
 }
 
 .page-body {
-  overflow: hidden;
   @media (min-width: $screen-sm) {
     position: relative;
     padding-top: 137px;
